Added gitignore files
Created Daily Weather Card.

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="col-lg-9">
 
                 <!-- PLACEHOLDER: Today's forecast -->
-                <div class="card">
+                <div class="card" id="featured-card">
                     <!-- <div class="card-body">
                         <h4 class="card-title">Card Title</h4>
                         <p class="card-text">Temperature: </p>
